<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Blog Android</string>
    <string name="app_logo_description">应用Logo</string>

    <string name="login_title">登录</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login_button">登录</string>
    <string name="register_link">还没有账号？点击注册</string>

    <string name="register_title">注册</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="register_button">注册</string>
    <string name="back_to_login_link">已有账号？返回登录</string>
</resources>